--- a/components/Search/Search.module.css
+++ b/components/Search/Search.module.css
@@ -1,21 +1,45 @@
+@value smallAndUp from '../../styles/breakpoints.css';
+
 .search {
   display: grid;
-  /* 1fr means it will fill the remaining space for each of these. auto grows as large as it's content */
-  grid-template-columns: 55% 1fr;
-  grid-template-rows: auto 1fr;
   /* requires all parent elements to also be height: 100% in order to work */
   height: 100%;
-  row-gap: 1rem;
-}
-
-.header,
-.filters {
-  grid-column: 1 / span 2;
+  grid-template-rows: auto 1fr;
 }
 
 .searchResults {
   /* overflow needs to be on the main parent for SearchResults. adding it to the SearchResults component just causes the
   page height to increase instead of making the content scroll */
   overflow-y: auto;
-  padding: 0 1rem 0.5rem 0;
+  padding: 0 1rem 1rem 1rem;
+}
+
+.map {
+  display: none;
+}
+
+@media smallAndUp {
+  .search {
+     /* 1fr means it will fill the remaining space for each of these. auto grows as large as it's content */
+    grid-template-columns: 50% 1fr;
+  }
+
+  .header {
+    grid-column: 1 / span 2;
+  }
+
+  .searchResults {
+    padding: 0 1rem 0 1rem;
+  }
+
+  .map {
+    display: block;
+  }
+
+}
+
+@media largeAndUp {
+  .search {
+    grid-template-columns: 55% 1fr;
+  }
 }
