--- a/components/map/BoundaryControl/BoundaryControl.module.css
+++ b/components/map/BoundaryControl/BoundaryControl.module.css
@@ -1,8 +1,14 @@
 .boundaryControl {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  bottom: 24px;
-  z-index: 1;
-  margin: 0 0 5px 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  border: none;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  font-size: inherit;
+  font-family: inherit;
+  color: var(--foreground);
+  white-space: nowrap;
 }
