--- a/styles/forms.module.css
+++ b/styles/forms.module.css
@@ -32,3 +32,19 @@
   user-select: none;
   padding-left: .5rem;
 }
+
+.select {
+  width: 100%;
+  cursor: pointer;
+  border: 1px solid var(--outline);
+  border-radius: 0.375rem;
+  height: 2.5rem;
+  padding: 0 .8rem;
+  font-size: inherit;
+  font-family: inherit;
+  color: inherit;
+}
+
+.select:hover {
+  background: var(--primary-light);
+}
