--- a/styles/forms.module.css
+++ b/styles/forms.module.css
@@ -3,7 +3,7 @@
 }
 
 .input {
-  padding: 0.6rem .8rem;
+  padding: 0.6rem 0.8rem;
   border-radius: 0.375rem;
   border: 1px solid var(--outline);
   font-size: inherit;
@@ -25,12 +25,12 @@
   display: flex;
   align-items: center;
   white-space: nowrap;
-  padding-top: .5rem;
+  padding-top: 0.5rem;
 }
 
 .inputListLabel {
   user-select: none;
-  padding-left: .5rem;
+  padding-left: 0.5rem;
 }
 
 .select {
@@ -39,7 +39,7 @@
   border: 1px solid var(--outline);
   border-radius: 0.375rem;
   height: 2.5rem;
-  padding: 0 .8rem;
+  padding: 0 0.8rem;
   font-size: inherit;
   font-family: inherit;
   color: inherit;
