--- a/styles/forms.module.css
+++ b/styles/forms.module.css
@@ -1,3 +1,10 @@
+.label {
+  display: inline-block;
+  margin-bottom: 0.6rem;
+  font-size: 1rem;
+  font-weight: 600;
+}
+
 .accessibleLabel {
   display: none;
 }
@@ -9,11 +16,15 @@
   font-size: inherit;
 }
 
-.checkbox {
- width: 1rem;
- height: 1rem; 
+.inputGroup {
+  display: flex;
+  flex-direction: column;
 }
 
+.checkbox {
+  width: 1rem;
+  height: 1rem;
+}
 
 .inputList {
   list-style: none;
