--- a/containers/Filters/Filters.module.css
+++ b/containers/Filters/Filters.module.css
@@ -1,4 +1,4 @@
-@value smallAndUp from '../../styles/breakpoints.css';
+@value smallAndUp from '../../styles/breakpoints.module.css';
 
 .filters {
   display: flex;
