--- a/components/design_system/RadioButtonGroup/RadioButtonGroup.module.css
+++ b/components/design_system/RadioButtonGroup/RadioButtonGroup.module.css
@@ -1,4 +1,5 @@
 .radioButtonGroup {
-  display: flex;
-  column-gap: .5rem;
+  display: grid;
+  grid-auto-flow: column;
+  justify-content: space-between;
 }
