--- a/containers/modals/FiltersModal/FiltersModal.module.css
+++ b/containers/modals/FiltersModal/FiltersModal.module.css
@@ -27,10 +27,12 @@
   display: flex;
   flex-direction: column;
   max-height: 100%;
-  border: 1px solid rgba(255, 255, 255, 0.19);
-  border-radius: 0.8rem;
   box-shadow: rgba(0, 0, 0, 0.8) 0px 1px 4px -1px;
+  border: 1px solid rgba(255, 255, 255, 0.19);
+  border-top-right-radius: 0.8rem;
+  border-top-left-radius: 0.8rem;
   background-color: var(--background);
+  margin-top: 2rem;
 }
 
 .modalContentAfterOpen {
@@ -114,5 +116,8 @@
   .modalContent {
     min-width: 25rem;
     min-height: 16rem;
+    max-height: 90%;
+    border-radius: 0.8rem;
+    margin-top: 0;
   }
 }
