--- a/components/design_system/modal/Modal/Modal.module.css
+++ b/components/design_system/modal/Modal/Modal.module.css
@@ -1,4 +1,4 @@
-@value smallAndUp from '../../../styles/breakpoints.module.css';
+@value smallAndUp from '../../../../styles/breakpoints.module.css';
 
 .modalOverlay {
   z-index: 1;
@@ -15,6 +15,11 @@
   transition: opacity 500ms ease-in-out;
 }
 
+.modalOverlayFullScreenOnMobile {
+  composes: modalOverlay;
+  padding-top: 1rem;
+}
+
 .modalOverlayAfterOpen {
   opacity: 1;
 }
@@ -27,12 +32,21 @@
   display: flex;
   flex-direction: column;
   max-height: 100%;
+  width: 92%;
   box-shadow: rgba(0, 0, 0, 0.8) 0px 1px 4px -1px;
   border: 1px solid rgba(255, 255, 255, 0.19);
+  background-color: var(--background);
+  border-radius: 0.8rem;
+}
+
+.modalContentFullScreenOnMobile {
+  composes: modalContent;
+  width: 100%;
+  height: 100%;
   border-top-right-radius: 0.8rem;
   border-top-left-radius: 0.8rem;
-  background-color: var(--background);
-  margin-top: 2rem;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
 }
 
 .modalContentAfterOpen {
@@ -61,63 +75,26 @@
   }
 }
 
-.header {
-  display: flex;
-  border-bottom: 1px solid rgb(235, 235, 235);
-  padding: 1rem;
-}
-
-.title {
-  flex-grow: 1;
-  margin: 0;
-  font-size: inherit;
-  text-align: center;
-}
-
-.closeButton {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: inherit;
-  border: none;
-  border-radius: 50%;
-  height: 1.5rem;
-  width: 1.5rem;
-  cursor: pointer;
-}
-
-.closeButton:hover {
-  background-color: var(--primary-light);
-}
-
-.body {
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
-  row-gap: 1rem;
-  padding: 1.5rem;
-  overflow-y: auto;
-}
-
-.footer {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  column-gap: 1rem;
-  border-top: 1px solid rgb(235, 235, 235);
-  padding: 1rem;
-}
-
 @media smallAndUp {
   .modalOverlay {
     z-index: auto;
   }
 
+  .modalOverlayFullScreenOnMobile {
+    padding-top: 0;
+  }
+
   .modalContent {
+    width: auto;
     min-width: 25rem;
     min-height: 16rem;
     max-height: 90%;
-    border-radius: 0.8rem;
     margin-top: 0;
+  }
+
+  .modalContentFullScreenOnMobile {
+    border-radius: 0.8rem;
+    width: auto;
+    height: auto;
   }
 }
