--- a/components/map/ListingMarkerContent/ListingMarkerContent.module.css
+++ b/components/map/ListingMarkerContent/ListingMarkerContent.module.css
@@ -1,3 +1,5 @@
+@value smallAndUp from '../../../styles/breakpoints.module.css';
+
 .link {
   color: initial;
   text-decoration: none;
@@ -24,62 +26,71 @@
   text-align: center;
   font-size: .8rem;
   font-weight: 500;
-  transition: all .2s ease-out .2s;
-}
-
-.listingMarker:hover .icon {
-  opacity: 0;
-  padding: 0;
-  font-size: 0;
-  transition: all .2s ease-in;
 }
 
 .popup {
-  border-radius: .8rem;
-  background-color: var(--background);
-  color: var(--foreground);
   opacity: 0;
   width: 0;
   height: 0;
   overflow: hidden;
-  transition: all .3s ease-out 0s;
 }
 
-.listingMarker:hover .popup {
-  opacity: 1;
-  width: 14rem;
-  height: 14rem;
-  transition: all .3s ease-in;
-}
+@media smallAndUp {
 
-.details {
-  padding: .5rem;
-  font-size: .9rem;
-}
+  .icon {
+    transition: all .2s ease-out .2s;
+  }
 
-.price {
-  font-size: 1rem;
-  font-weight: 500;
-}
-
-.bedBathSqft {
-  display: flex;
-  column-gap: .4rem;
-}
-
-.price,
-.bedBathSqft {
-  margin-bottom: .4rem;
-}
-
-.address {
-  display: flex;
-  flex-direction: column;
-}
-
-.addressLine1,
-.addressLine2 {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  .listingMarker:hover .icon {
+    opacity: 0;
+    padding: 0;
+    font-size: 0;
+    transition: all .2s ease-in;
+  }
+  
+  .popup {
+    border-radius: .8rem;
+    background-color: var(--background);
+    color: var(--foreground);
+    transition: all .3s ease-out 0s;
+  }
+  
+  .listingMarker:hover .popup {
+    opacity: 1;
+    width: 14rem;
+    height: 14rem;
+    transition: all .3s ease-in;
+  }
+  
+  .details {
+    padding: .5rem;
+    font-size: .9rem;
+  }
+  
+  .price {
+    font-size: 1rem;
+    font-weight: 500;
+  }
+  
+  .bedBathSqft {
+    display: flex;
+    column-gap: .4rem;
+  }
+  
+  .price,
+  .bedBathSqft {
+    margin-bottom: .4rem;
+  }
+  
+  .address {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .addressLine1,
+  .addressLine2 {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
