--- a/components/listings/ListingCards/ListingCards.module.css
+++ b/components/listings/ListingCards/ListingCards.module.css
@@ -1,4 +1,4 @@
-.searchResultsList {
+.listingCards {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(17.5rem, 1fr));
   gap: .8rem;
