Added home page link to logo

--- a/components/header/Logo/Logo.module.css
+++ b/components/header/Logo/Logo.module.css
@@ -1,5 +1,10 @@
 @value smallAndUp from '../../../styles/breakpoints.module.css';
 
+.link {
+  color: initial;
+  text-decoration: none;
+}
+
 .logo {
   display: none;
 }
