Allow SearchFieldContainer to take event callbacks
Handle onSearchInitiated & onOptionSelected inside SearchHeader instead of SearchFieldContainer. This will allow us more flexibility for how to handle these events when the search field is inside a different context, such as when a search is initiated from the home page.

--- a/containers/SearchHeader/SearchHeader.module.css
+++ b/containers/SearchHeader/SearchHeader.module.css
@@ -1,4 +1,4 @@
-@value smallAndUp, largeAndUp from '../../../styles/breakpoints.module.css';
+@value smallAndUp, largeAndUp from '../../styles/breakpoints.module.css';
 
 .header {
   display: grid;
