Styling for UserMenu

--- a/components/header/UserMenu/UserMenu.module.css
+++ b/components/header/UserMenu/UserMenu.module.css
@@ -1,4 +1,4 @@
-.loginButton {
+.menuButton {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -13,14 +13,38 @@
   height: 1.5rem;
 }
 
-.loginMenu {
-  display: grid;
-  row-gap: .8rem;
+.header {
+  text-align: center;
   padding: 1rem;
 }
 
-.user {
+.name {
   font-size: 1rem;
   margin: 0;
-  text-align: center;
+}
+
+.menuList {
+  list-style: none;
+  margin: 0;
+  padding: 0.5rem 0;
+}
+
+.menuListWithSeparator {
+  composes: menuList;
+  border-top: solid var(--outline) 1px;
+}
+
+.menuItem {
+  cursor: pointer;
+  padding: .5rem 1rem;
+  font-weight: 500;
+}
+
+.menuItem:hover {
+  background-color: var(--primary-light);
+}
+
+.link {
+  color: var(--foreground);
+  text-decoration: none;
 }
