Removed favorite button from slideshow
I decided that I prefer the slideshow to be simple. It should only include functionality related to an image slideshow. No favorites, no share button, etc.

--- a/components/listings/listing_detail/SlideShow/SlideShow.module.css
+++ b/components/listings/listing_detail/SlideShow/SlideShow.module.css
@@ -26,7 +26,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 2.5rem 2.5rem 1.25rem 2.5rem;
+  padding: 2.5rem 3rem 1.25rem 2.5rem;
 }
 
 .close {
@@ -44,6 +44,11 @@
 
 .close:hover {
   background: rgb(74, 74, 74);
+}
+
+.imageCount {
+  text-align: center;
+  flex-grow: 1;
 }
 
 .carouselButton {
