--- a/components/listings/listing_detail/ListingDetail/ListingDetail.module.css
+++ b/components/listings/listing_detail/ListingDetail/ListingDetail.module.css
@@ -1,16 +1,12 @@
-.header {
-  height: 3rem;
-  padding-top: .5rem;
-  border-bottom: 1px solid #cccccc;
-}
-
 .listingDetail {
   display: flex;
   flex-direction: column;
   row-gap: 1rem;
-  margin: 0 auto;
-  width: 50rem;
-  padding: 1rem 0 2rem 0;
+}
+
+.status {
+  display: flex;
+  column-gap: 1rem;
 }
 
 .price {
@@ -21,9 +17,5 @@
 .neighborhood {
   font-size: 1.5rem;
   font-weight: 600;
-  margin-top: .3rem;
-}
-
-.comments {
-  margin: 0;
+  margin-top: 0.3rem;
 }
