--- a/components/listings/listing_detail/ListingDetail/ListingDetail.module.css
+++ b/components/listings/listing_detail/ListingDetail/ListingDetail.module.css
@@ -6,7 +6,9 @@
 
 .status {
   display: flex;
-  column-gap: 1rem;
+  align-items: center;
+  column-gap: .5rem;
+  color: var(--sold-listing);
 }
 
 .price {
