--- a/styles/breakpoints.module.css
+++ b/styles/breakpoints.module.css
@@ -1,5 +1,6 @@
 /* smallAndUp is for larger handheld devices. we don't have extra small for normal phone sizes because those are
 considered the default for mobile-first design */
+@value smallAndDown: only screen and (max-width: 575px);
 @value smallAndUp: only screen and (min-width: 576px);
 @value mediumAndUp: only screen and (min-width: 768px);
 @value largeAndUp: only screen and (min-width: 992px);
