Fixed layout bug on mobile

--- a/components/listings/listing_detail/ListingDetailImage/ListingDetailImage.module.css
+++ b/components/listings/listing_detail/ListingDetailImage/ListingDetailImage.module.css
@@ -1,7 +1,7 @@
 @value smallAndUp from '../../../../styles/breakpoints.module.css';
 
 .listingDetailImage {
-  height: 20rem;
+  max-height: 20rem;
 }
 
 @media smallAndUp {
