--- a/components/form/SearchButton/SearchButton.module.css
+++ b/components/form/SearchButton/SearchButton.module.css
@@ -5,7 +5,7 @@
   cursor: pointer;
   border: none;
   border-radius: 0 1.25rem 1.25rem 0;
-  width: 3rem;
+  min-width: 2.6rem;
   padding: 0;
   margin: 0;
   background-color: var(--search-button-background);
