--- a/components/map/ListingMarkerContent/ListingMarkerContent.module.css
+++ b/components/map/ListingMarkerContent/ListingMarkerContent.module.css
@@ -35,6 +35,14 @@
   overflow: hidden;
 }
 
+.listingMarkerImage {
+  object-fit: cover;
+  width: 100%;
+  height: 7.5rem;
+  border-top-left-radius: .8rem;
+  border-top-right-radius: .8rem;
+}
+
 @media smallAndUp {
 
   .listingMarkerHighlighted {
