--- a/components/AccountBody/AccountBody.module.css
+++ b/components/AccountBody/AccountBody.module.css
@@ -1,4 +1,4 @@
-@value smallAndUp from '../../styles/breakpoints.module.css';
+@value smallAndUp, mediumAndUp from '../../styles/breakpoints.module.css';
 
 .accountBody {
   padding: 1rem;
