--- a/components/map/ListingMarkerContent/ListingMarkerContent.module.css
+++ b/components/map/ListingMarkerContent/ListingMarkerContent.module.css
@@ -14,7 +14,7 @@
   cursor: pointer;
   background-color: var(--listing-marker-background);
   color: var(--listing-marker-foreground);
-  border-radius: .8rem;
+  border-radius: 0.8rem;
   min-width: 3rem;
   min-height: 1.5rem;
   box-shadow: rgba(0, 0, 0, 0.8) 0px 1px 4px -1px;
@@ -22,9 +22,9 @@
 
 .icon {
   opacity: 1;
-  padding: .3rem .4rem;
+  padding: 0.3rem 0.4rem;
   text-align: center;
-  font-size: .8rem;
+  font-size: 0.8rem;
   font-weight: 500;
 }
 
@@ -38,13 +38,12 @@
 .listingMarkerImage {
   object-fit: cover;
   width: 100%;
-  height: 7.5rem;
-  border-top-left-radius: .8rem;
-  border-top-right-radius: .8rem;
+  aspect-ratio: 16 / 9;
+  border-top-left-radius: 0.8rem;
+  border-top-right-radius: 0.8rem;
 }
 
 @media smallAndUp {
-
   .listingMarkerHighlighted {
     composes: listingMarker;
   }
@@ -56,55 +55,55 @@
   }
 
   .icon {
-    transition: all .2s ease-out .2s;
+    transition: all 0.2s ease-out 0.2s;
   }
 
   .listingMarker:hover .icon {
     opacity: 0;
     padding: 0;
     font-size: 0;
-    transition: all .2s ease-in;
+    transition: all 0.2s ease-in;
   }
-  
+
   .popup {
-    border-radius: .8rem;
+    border-radius: 0.8rem;
     background-color: var(--background);
     color: var(--foreground);
-    transition: all .3s ease-out 0s;
+    transition: all 0.3s ease-out 0s;
   }
-  
+
   .listingMarker:hover .popup {
     opacity: 1;
-    width: 14rem;
-    height: 14rem;
-    transition: all .3s ease-in;
+    width: 15rem;
+    height: 15rem;
+    transition: all 0.3s ease-in;
   }
-  
+
   .details {
-    padding: .5rem;
-    font-size: .9rem;
+    padding: 0.5rem 0.7rem;
+    font-size: 0.9rem;
   }
-  
+
   .price {
     font-size: 1rem;
     font-weight: 500;
   }
-  
+
   .bedBathSqft {
     display: flex;
-    column-gap: .4rem;
+    column-gap: 0.4rem;
   }
-  
+
   .price,
   .bedBathSqft {
-    margin-bottom: .4rem;
+    margin-bottom: 0.4rem;
   }
-  
+
   .address {
     display: flex;
     flex-direction: column;
   }
-  
+
   .addressLine1,
   .addressLine2 {
     white-space: nowrap;
