--- a/components/listings/listing_detail/ListingDetail/ListingDetail.module.css
+++ b/components/listings/listing_detail/ListingDetail/ListingDetail.module.css
@@ -2,12 +2,15 @@
   display: flex;
   flex-direction: column;
   row-gap: 1rem;
+  max-width: 50rem;
+  margin: 0 auto;
+  padding: 1rem 0 2rem 0;
 }
 
 .status {
   display: flex;
   align-items: center;
-  column-gap: .5rem;
+  column-gap: 0.5rem;
   color: var(--sold-listing);
 }
 
