--- a/components/listings/listing_detail/SlideShow/SlideShow.module.css
+++ b/components/listings/listing_detail/SlideShow/SlideShow.module.css
@@ -4,12 +4,13 @@
   left: 0;
   z-index: 100;
   display: grid;
-  grid-template-rows: 95px 90%;
+  grid-template-rows: 95px calc(100% - 95px);
   height: 100vh;
   width: 100%;
   background-color: black;
   color: white;
   border: none;
+  padding: 0;
 }
 
 .slideShowClosed {
@@ -26,18 +27,19 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin: 0;
 }
 
 .listingImage {
   max-width: 100%;
-  max-height: 100%;
+  max-height: calc(100% - 95px);
 }
 
 .header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 2.5rem 3rem 1.25rem 2.5rem;
+  padding: 2.5rem 0 0 2.5rem;
 }
 
 .caption {
