Moved Home component into page
There was really no point in doing it this way at all.

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,4 +1,4 @@
-@value smallAndUp from '../../styles/breakpoints.module.css';
+@value smallAndUp from '../styles/breakpoints.module.css';
 
 .home {
   display: grid;
