--- a/components/design_system/ShowMore/ShowMore.module.css
+++ b/components/design_system/ShowMore/ShowMore.module.css
@@ -16,11 +16,7 @@
   bottom: 0;
   width: 100%;
   height: 150px;
-  background-image: linear-gradient(
-    to bottom,
-    rgba(255, 255, 255, 0) 0%,
-    rgba(255, 255, 255, 1) 95%
-  );
+  background-image: var(--show-more-background-image);
   pointer-events: none;
   transition: height 0.25s ease;
 }
