--- a/styles/globals.css
+++ b/styles/globals.css
@@ -36,6 +36,12 @@ body,
   --active-listing: green;
   --sold-listing: red;
   --slideshow-header-height: 6rem;
+  --show-more-background-image: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 1) 95%
+  );
+  --listing-details-name-foreground: #767676;
 }
 
 [data-theme='purple'] {
@@ -70,6 +76,12 @@ body,
   --listing-marker-foreground-visited: #e0e0e0;
   --logo: white;
   --map-control: rgba(34, 39, 46, 0.8);
+  --show-more-background-image: linear-gradient(
+    to bottom,
+    rgb(34, 39, 46, 1) 0%,
+    rgba(255, 255, 255, 0) 95%
+  );
+  --listing-details-name-foreground: #9f9e9e;
 }
 
 body {
