--- a/components/listings/listing_detail/SlideShow/SlideShow.module.css
+++ b/components/listings/listing_detail/SlideShow/SlideShow.module.css
@@ -1,9 +1,12 @@
 .slideShow {
+  display: none;
   position: fixed;
   top: 0;
   left: 0;
   z-index: 100;
-  display: grid;
+  /* Preventing the image height from overflowing the page proved to be very
+  difficult. Using calc to restrict the height of both the image and it's
+  container seems to be the only thing that works well.  */
   grid-template-rows: var(--slideshow-header-height) calc(
       100% - var(--slideshow-header-height)
     );
@@ -13,10 +16,38 @@
   color: white;
   border: none;
   padding: 0;
+  /* The allow-discrete makes it so the closing animation works correctly. See:
+  https://frontendmasters.com/blog/animating-dialog/#transition-behavior-allow-discreteŒ
+  */
+  transition: display 500ms allow-discrete, overlay 500ms allow-discrete;
+  animation: close 500ms forwards;
+}
+
+.slideShow[open] {
+  display: grid;
+  animation: open 500ms forwards;
 }
 
 .slideShowClosed {
   display: none;
+}
+
+@keyframes open {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes close {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
 }
 
 .carousel {
